# ExamenSelection2026

./: .gitignore  README.md  flags
Agents/: .gitignore  README.md  grid.py  main.py  maps.py  robot.py  solution.py
ArtificialIntelligence/: .gitignore  Readme.md  our_students.csv  pyproject.toml  question_ML.ipynb  requirements.txt  sample_students.csv
CTF/: README.md
CTF/challenge_3/: challenge3  main.c
Cobol/: README.md
Cobol/1-FizzBuzz/: mian.cbl
Cobol/2-Fibonacci/: main.cbl  mainRecursive.cbl
Cobol/3-BubbleSort/: main.cbl
DataManagement/: README.md  docker-compose.yaml  init.sql
DataManagement/querry/: q1.sql  q10.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
DevOps/: README.md
HighPerformanceComputing/: README.md
HighPerformanceComputing/Burn/: Cargo.toml
HighPerformanceComputing/Burn/src/: main.rs  perceptron.rs  trainer.rs
HighPerformanceComputing/CubeCl/: Cargo.toml
HighPerformanceComputing/CubeCl/src/: main.rs
Proof/: README.md
Proof/Csgames/: README.md  lake-manifest.json  lakefile.toml
Proof/Csgames/Csgames/: Murderers.lean
Shaders/: CMakeLists.txt  README.md  imgui.ini
Shaders/shaders/cube/: cube.fs.glsl  cube.vs.glsl
Shaders/shaders/phong/: phong.fs.glsl  phong.vs.glsl
Shaders/shaders/wavePlane/: wavePlane.fs.glsl  wavePlane.vs.glsl
Shaders/src/: main.cpp
Shaders/src/constructor/: meshConstructor.cpp  meshConstructor.h
Shaders/src/input/: input.cpp  input.h
Shaders/src/mesh/: mesh.cpp  mesh.h
Shaders/src/mesh/cube/: cube.cpp  cube.h
Shaders/src/mesh/wavePlane/: wavePlane.cpp  wavePlane.h
Shaders/src/scene/: scene.cpp  scene.h
UI-UX/: README.md
Web/: Readme.md
Web/backend/: index.ts  package-lock.json  package.json  tsconfig.json
Web/backend/data/: database.json
Web/frontend/: package-lock.json  package.json
(+14 files in other folders)
